--- a/ConferenceRooms/ConferenceRooms/ConferenceRooms.csproj
+++ b/ConferenceRooms/ConferenceRooms/ConferenceRooms.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{86A5B307-F380-49CF-BFAB-713B97CE9C5A}</ProjectGuid>
+    <ProjectGuid>{C83A4463-C112-4EAD-9A83-87D36363790D}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>PizzaFactory</RootNamespace>
-    <AssemblyName>PizzaFactory</AssemblyName>
+    <RootNamespace>ConferenceRooms</RootNamespace>
+    <AssemblyName>ConferenceRooms</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
@@ -36,7 +36,6 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -44,10 +43,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Pizza.cs" />
+    <Compile Include="ConferenceRoom.cs" />
+    <Compile Include="LargeConferenceRoom.cs" />
+    <Compile Include="MediumConferenceRoom.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SimplePizzaFactory.cs" />
+    <Compile Include="ReserveConferenceRoom.cs" />
+    <Compile Include="SmallConferenceRoom.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
